Fix jump menu alignment

--- a/style.scss
+++ b/style.scss
@@ -5734,7 +5734,7 @@ img.media-element {
         }
     }
 }
-.pane-bikeabout-issue-selection-panel-pane-1 {
+.view-bikeabout-issue-selection {
     #ctools-jump-menu {
         text-align: center;
         
